[project]
name = "n2t"
version = "0.10.8"
description = "Implementation of N2T in python"
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = "~=3.11"
license = "MIT"
dependencies = [
    "PyYAML>=6,<7",
    "fastapi>=0,<1",
    "pydantic-settings>=2,<3",
    "rslv",
    "click>=8.1.7,<9",
    "httpx>=0.27.0,<0.28",
    "sqlalchemy[asyncio]>=2.0.29,<3",
    "aiosqlite>=0.20.0,<0.21",
]

[project.scripts]
n2t = "n2t.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "uvicorn>=0,<1",
    "uvicorn>=0.27.1,<0.28",
    "geoip2>=4.8.0,<5",
    "textual>=0.56.4,<0.57",
    "hopper",
]

[tool.poetry_bumpversion.file."n2t/__init__.py"]

[tool.uv]

[tool.uv.sources]
hopper = { git = "https://github.com/datadavev/looseroo.git" }
rslv = { git = "https://github.com/CDLUC3/resolver.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
