[project]
name = "n2t"
version = "0.10.8"
description = "Implementation of N2T in python"
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<4.0"
license = "MIT"
dependencies = [
    "PyYAML>=6,<7",
    "fastapi>=0,<1",
    "pydantic-settings>=2,<3",
    "rslv",
    "click>=8.1.7,<9",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.29,<3",
    "aiosqlite>=0.20.0",
]

[project.scripts]
n2t = "n2t.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "uvicorn>=0,<1"
]

[tool.poetry_bumpversion.file."n2t/__init__.py"]

[tool.uv]

[tool.uv.sources]
hopper = { git = "https://github.com/datadavev/looseroo.git" }
rslv = { git = "https://github.com/CDLUC3/resolver.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
